<resources>
    <string name="app_name">Chhote Scientists</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="str_area_of_living">Select Area Of Residence</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_passwod">Change Password</string>
    <string name="send_feedback_msg">Send Feedback</string>
    <string name="cs_center_prompt">Chhote Scientists Center</string>
    <string name="my_profile">View My Profile</string>
    <string name="exp_list">List Of Experiments</string>
    <string name="exp_detail">Experiment Detail</string>
    <string name="play_video">Video View</string>
    <string name="view_calender">View My Calender</string>
    <!-- notification msgs-->
    <string name="notify_welcome">Welcome to Chhote Scientists</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="session_questionnaire">Session Questionnaire</string>
    <string name="check_internet_and_try_again">Check your internet connection and try again.</string>
    <string name="error_sending_response_try_again">There was an error sending your responses. Please try again later.</string>
    <string name="add_file">Add file</string>
    <string name="questionnaire_upoaded_successfully">Questionnaire uploaded successfully</string>
    <string name="questionnaire_upload_error">Error uploading questionnaire. Please try again</string>
    <string name="media_uploaded_successfully">Media uploaded successfully</string>
    <string name="error_uploading_media">Error uploading media</string>
    <string name="must_be_connected_to_internet">Must be connected to internet</string>
    <string name="remove_photo">Remove photo</string>
    <string name="do_you_want_to_remove_photo">Do you want to remove this photo from your response?</string>
    <string name="n_students_expected">%s students expected</string>
    <string name="theme_x">Theme: %s</string>
    <string name="session_title_transition">session title transition</string>
    <string name="session_date_transition">session date transition</string>
    <string name="session_theme_transition">session theme transition</string>
    <string name="expected_student_count_transition">expected student count transition</string>

    <string name="credit_text">Credits</string>

    <string name="credit_text_1">Concept</string>
    <string name="credit_text_2">Jnana Prabodhini, Educational Activity Research Center\nKPIT Technologies Ltd.</string>

    <string name="credit_text_3">Content and Media</string>
    <string name="credit_text_4">Jnana Prabodhini, Educational Activity Research Center</string>

    <string name="credit_text_5">Application Support</string>
    <string name="credit_text_6">Jnana Prabodhini, Educational Activity Research Center\nKPIT Technologies Ltd.</string>
    <string name="must_be_logged_in">You must be logged in to view this content.</string>
    <string name="version_check_msg">Chhote Scientists app is out of date. Upgrade to the latest version to experience new features.</string>
    <string name="no_pdf">This experiment does not have a PDF document.</string>
    <string name="no_video">This experiment does not have a video.</string>
    <string name="signup_text">Not Yet Registered ? Write to &lt;u>support@chhotescientists.org&lt;/u> to get registered.&lt;br/>To help us get you into appropriate role, please briefly mention how you plan to use the application.</string>
</resources>
