<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey_300"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbarStyle="outsideOverlay">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

<!--
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/credit_text"
                    android:textSize="20dp" />

-->
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/credit_text_1"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/credit_text_2"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView2"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/credit_text_3"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView3"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/credit_text_4"
                    android:textSize="18dp" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView4"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/credit_text_5"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView5"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/credit_text_6"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/textView6"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_weight="0.4"
                        android:src="@drawable/jp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_weight="0.6"
                        android:src="@drawable/kpit" />
                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
